--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,14 @@ owner: gabe50 # Your GitHub organization or username, where this repository live
 repo: uptime # The name of this repository
 
 sites:
-  - name: Revista
-    url: https://pensamientopenal.com.ar/
+  - name: Deuda(server 59)
+    url: https://deuda-dgrentas.arca.gob.ar/
+  - name: TramitesWeb(ord 50)
+    url: https://tramitesweb.arca.gob.ar/
+  - name: Pagina Rentas(telecom)
+    url: https://dgrentas.arca.gob.ar/
+  - name: Pagina Catastro(server 64)
+    url: https://dgcatastro.arca.gob.ar/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
